# mcp-chatbot

./: pyproject.toml  requirements.txt
backend/: memory.index  memory_engine.py  requirements.txt  test_memory_engine.py
backend/app/: main.py
backend/app/api/: chat.py  chat_routes.py  context_builder_api.py  embedding.py  health.py  memory_routes.py  profile_routes.py
backend/app/core/: config.py  context_builder.py  re_ranking.py  service_loader.py  session_store.py  settings.py  user_profile_store.py
backend/app/schemas/: embedding.py  health.py  message.py
backend/app/services/: chat_service.py  health_service.py  profile_extractor.py
backend/app/services/llm/: embedding_service.py  llm_service.py
backend/app/services/memory/: memory_engine.py  memory_writer.py
backend/app/utils/: id_utils.py  model_loder.py
backend/data/: memories.db
backend/data/chroma/: chroma.sqlite3
