[project]
name = "mcp-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mcp>=1.22.0",
    "openai>=2.8.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
